--- a/.github/workflows/tauri-release.yaml
+++ b/.github/workflows/tauri-release.yaml
@@ -18,12 +18,12 @@ jobs:
             args: "--target aarch64-apple-darwin"
           - platform: "macos-latest" # for Intel based macs.
             args: "--target x86_64-apple-darwin"
-          - platform: "ubuntu-22.04"
-            args: ""
-          - platform: "ubuntu-22.04-arm" # Only available in public repos.
-            args: ""
-          - platform: "windows-latest"
-            args: ""
+          # - platform: "ubuntu-22.04"
+          #   args: ""
+          # - platform: "ubuntu-22.04-arm" # Only available in public repos.
+          #   args: ""
+          # - platform: "windows-latest"
+          #   args: ""
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -63,6 +63,6 @@ jobs:
           tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: "App v__VERSION__"
           releaseBody: "See the assets to download this version and install."
-          releaseDraft: true
+          releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
